# mini_isp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: ccm.txt  disturbed_pictures.raw  face.dng
include/: Demosaic.hpp  ImageIO.hpp  Utils.hpp
src/: Demosaic.cpp  ImageIO.cpp  Utils.cpp
utils/: AWB.py  ISP_pipeline.py  gamma.py
